results/classifier/zero-shot/118/device/2314
device: 0.873
graphic: 0.768
network: 0.686
PID: 0.685
files: 0.680
vnc: 0.678
semantic: 0.656
permissions: 0.623
socket: 0.617
ppc: 0.555
architecture: 0.514
kernel: 0.512
boot: 0.494
register: 0.460
risc-v: 0.434
debug: 0.414
arm: 0.398
TCG: 0.337
hypervisor: 0.298
user-level: 0.291
performance: 0.264
mistranslation: 0.258
peripherals: 0.213
VMM: 0.207
virtual: 0.199
assembly: 0.184
i386: 0.162
x86: 0.139
KVM: 0.098

Building QEMU 9.0.0 fails on MacOS 10.15.7 (error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id')
Description of problem:
QEMU fails to compile using Homebrew on OS X 10.15.7:
```
../ui/cocoa.m:542:18: error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id'
    NSEdgeInsets insets = [[[self window] screen] safeAreaInsets];
                 ^        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```
Steps to reproduce:
1. Compile QEMU on OS X 10.15.7 using Homebrew
2.
3.
Additional information:
Build log
[02.make.zip](/uploads/dfb618b86984ed6cf699d94bf9d6c9e1/02.make.zip)
